src/main/java/com/example/githubrepos/api/error/exception/ApiServiceException.java
package com.example.githubrepos.api.error.exception;

public class ApiServiceException extends RuntimeException {
    public ApiServiceException(String exception) {
        super(exception);
    }
}
